[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "keygen"
dynamic = ["version"]
description = "Keygen for generate keys :)"
readme = { file = "README.md", content-type = "text/markdown" }
license = { text = "Freeware" }
authors = [{ name = "Bobsans", email = "mr.bobsans@gmail.com" }]
keywords = ["key", "keygen", "secure", "password"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "License :: Freeware",
  "Natural Language :: English",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Utilities",
]
requires-python = ">=3.10"

[project.optional-dependencies]
dev = ["pytest>=7.0.0", "pytest-cov>=4.0.0"]

[project.urls]
Homepage = "https://github.com/Bobsans/keygen"

[project.scripts]
keygen = "keygen.main:main"

[tool.hatch.version]
path = "keygen/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["keygen"]
